[gd_scene load_steps=2 format=3 uid="uid://boogpxiya3ohe"]

[ext_resource type="Script" path="res://Turrets/base_turret/base_turret.gd" id="1_j0t5m"]

[node name="base_turret" type="Node3D"]
script = ExtResource("1_j0t5m")
horizontal_rotation_speed = 0.5
vertical_rotation_speed = 0.5

[node name="reload_timer" type="Timer" parent="."]
process_callback = 0

[node name="detection" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="detection"]

[node name="x_pivot" type="Node3D" parent="."]

[node name="muzzle" type="Marker3D" parent="x_pivot"]
unique_name_in_owner = true
editor_description = "The point from which projectiles, hitscans, animations, particles etc will originate."

[connection signal="timeout" from="reload_timer" to="." method="reload"]
[connection signal="body_entered" from="detection" to="." method="target_entered"]
[connection signal="body_exited" from="detection" to="." method="target_exited"]
